# deck

./: CLAUDE.md  Cargo.toml  README.md  TODO.md
design-docs/: 01.initial.md  02.database-operations.md
docs/: types-overview.md
examples/: complete_config.json  parse_config.rs  simple_config.json
src/: lib.rs
src/config/: database.rs  middleware.rs  mod.rs  root.rs  route.rs  template.rs
src/executor/: mod.rs  traits.rs
src/operators/: collection.rs  conditional.rs  data.rs  database.rs  mod.rs  utility.rs
src/pipeline/: context.rs  error.rs  mod.rs  step.rs
