[package]
name = "deck"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.49", features = ["derive"] }
jsonpath-rust = "1.0.4"
jsonschema = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
